--- a/horizontal-profile/Main.storyboard
+++ b/horizontal-profile/Main.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,14 +16,76 @@
                         <viewControllerLayoutGuide type="bottom" id="Etu-VJ-UYv"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="uyK-DA-0FD">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R68-U8-nc8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="NgN-tc-evP"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Ys-Im-sSG">
+                                <rect key="frame" x="32" y="180" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="8Ys-Im-sSG" secondAttribute="height" multiplier="1:1" id="HCG-9r-rpf"/>
+                                    <constraint firstAttribute="height" priority="750" constant="100" id="SNn-lS-AjC"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Class name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSH-6m-psF">
+                                <rect key="frame" x="164" y="219" width="89" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interesting Fact" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OwX-k3-McI">
+                                <rect key="frame" x="164" y="259" width="119" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyF-Ec-T7q">
+                                <rect key="frame" x="164" y="180" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QLY-l3-aY5">
+                                <rect key="frame" x="20" y="312" width="335" height="200"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8Ys-Im-sSG" firstAttribute="top" secondItem="R68-U8-nc8" secondAttribute="bottom" priority="750" constant="80" id="2a4-pE-vgq"/>
+                            <constraint firstItem="QLY-l3-aY5" firstAttribute="top" secondItem="OwX-k3-McI" secondAttribute="bottom" priority="750" constant="32" id="9Bk-ze-EvH"/>
+                            <constraint firstItem="R68-U8-nc8" firstAttribute="centerX" secondItem="uyK-DA-0FD" secondAttribute="centerX" id="AsY-Wi-2Pm"/>
+                            <constraint firstItem="QLY-l3-aY5" firstAttribute="leading" secondItem="uyK-DA-0FD" secondAttribute="leading" constant="20" id="WkF-ao-QjG"/>
+                            <constraint firstItem="QLY-l3-aY5" firstAttribute="top" relation="greaterThanOrEqual" secondItem="uyK-DA-0FD" secondAttribute="topMargin" constant="32" id="a1R-62-eb4"/>
+                            <constraint firstItem="fyF-Ec-T7q" firstAttribute="top" secondItem="8Ys-Im-sSG" secondAttribute="top" id="bcT-g8-PId"/>
+                            <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="QLY-l3-aY5" secondAttribute="bottom" constant="20" id="bgz-Lp-ujb"/>
+                            <constraint firstItem="QLY-l3-aY5" firstAttribute="top" secondItem="8Ys-Im-sSG" secondAttribute="bottom" priority="750" constant="32" id="c3B-HY-CnA"/>
+                            <constraint firstItem="R68-U8-nc8" firstAttribute="width" secondItem="uyK-DA-0FD" secondAttribute="width" id="c8a-kx-p5Y"/>
+                            <constraint firstItem="OwX-k3-McI" firstAttribute="leading" secondItem="8Ys-Im-sSG" secondAttribute="trailing" priority="750" constant="32" id="cds-CG-QFW"/>
+                            <constraint firstItem="8Ys-Im-sSG" firstAttribute="top" relation="greaterThanOrEqual" secondItem="uyK-DA-0FD" secondAttribute="topMargin" constant="32" id="dDC-r4-A6H"/>
+                            <constraint firstItem="fyF-Ec-T7q" firstAttribute="leading" secondItem="8Ys-Im-sSG" secondAttribute="trailing" priority="750" constant="32" id="dGk-He-gDO"/>
+                            <constraint firstItem="8Ys-Im-sSG" firstAttribute="leading" secondItem="uyK-DA-0FD" secondAttribute="leading" priority="750" constant="32" id="glP-Y6-Afa"/>
+                            <constraint firstItem="rSH-6m-psF" firstAttribute="centerY" secondItem="8Ys-Im-sSG" secondAttribute="centerY" id="j3A-la-Sqv"/>
+                            <constraint firstItem="R68-U8-nc8" firstAttribute="top" secondItem="uyK-DA-0FD" secondAttribute="topMargin" id="oDW-NK-Lpc"/>
+                            <constraint firstItem="OwX-k3-McI" firstAttribute="bottom" secondItem="8Ys-Im-sSG" secondAttribute="bottom" id="sHe-hR-NeJ"/>
+                            <constraint firstItem="rSH-6m-psF" firstAttribute="leading" secondItem="8Ys-Im-sSG" secondAttribute="trailing" priority="750" constant="32" id="sxr-W5-S4V"/>
+                            <constraint firstItem="fyF-Ec-T7q" firstAttribute="top" relation="greaterThanOrEqual" secondItem="uyK-DA-0FD" secondAttribute="topMargin" constant="32" id="tZF-Oq-UKA"/>
+                            <constraint firstAttribute="trailing" secondItem="QLY-l3-aY5" secondAttribute="trailing" constant="20" id="wTG-Ua-Nwb"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dbL-A6-cv5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="412" y="338"/>
+            <point key="canvasLocation" x="411.5" y="337.5"/>
         </scene>
     </scenes>
 </document>
